nagyon sok javadoc es nehany felesleges dolog kiszedese